jQuery 내부링크 변경

--- a/jqueryPlugin/demo/popup/bpopup/ex01.html
+++ b/jqueryPlugin/demo/popup/bpopup/ex01.html
@@ -11,7 +11,7 @@
     .popup-wrap .trp_popup .con { position:relative; clear: both; height: 220px; padding:10px; text-align: center; }	 
     
     </style>
-  <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/bpopup/jquery.bpopup.min.js"></script>
 </head>
 <body>
