--- a/jqueryPlugin/demo/popup/bpopup/ex02.html
+++ b/jqueryPlugin/demo/popup/bpopup/ex02.html
@@ -21,7 +21,7 @@
 
 </style>
 
-<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpPopup.js"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/bpopup/jquery.bpopup.min.js"></script>
 </head>
