--- a/scriptLibrary/demo/form/input_placeholder/ex12.html
+++ b/scriptLibrary/demo/form/input_placeholder/ex12.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 	
 </style>
-<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 <!-- <script type="text/javascript" src="../../../../asset/js/libs/trpPopup.js"></script> -->
 <script type="text/javascript">
 /* jquery  $.browser.msie 이용한 변경  */
