--- a/scriptLibrary/demo/popup/layerFixedPopupFile/ex01.html
+++ b/scriptLibrary/demo/popup/layerFixedPopupFile/ex01.html
@@ -22,7 +22,7 @@
         .trp.popupfixed-wrap .popup-layer .btn_x { position:absolute; top:15px; right:15px; width:18px; height:18px; background:#aaa; }      
         
     </style>     
-	<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/trpPopup_all0.83.js"></script>
  </head>
  <body>
