--- a/scriptLibrary/demo/popup/layerFixedPopupFile/trpPopup_all0.82/ex01.html
+++ b/scriptLibrary/demo/popup/layerFixedPopupFile/trpPopup_all0.82/ex01.html
@@ -14,7 +14,7 @@
         .tr.popupfixed-wrap .popup-layer .btn_close { position:absolute; top:15px; right:-15px; background:#aaa;}          
         
     </style>    
-	<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/trpPopup_all0.82.js"></script>
  </head>
  <body>
