--- a/scriptLibrary/demo/popup/layerPopup/ex11.html
+++ b/scriptLibrary/demo/popup/layerPopup/ex11.html
@@ -15,7 +15,7 @@
 
 		#popup_warp { position:absolute; top:0; left:0; display:none; width:100%; height:100% }
 	</style>
-<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpPopup.js"></script>
 
 <script type="text/javascript">
