--- a/scriptLibrary/demo/popup/layerPopupFile/ex01.html
+++ b/scriptLibrary/demo/popup/layerPopupFile/ex01.html
@@ -14,7 +14,7 @@
 	
 	</style>
 
-	<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/trpPopup_all0.83.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
