--- a/scriptLibrary/demo/utility/removeClassPrefix/ex01.html
+++ b/scriptLibrary/demo/utility/removeClassPrefix/ex01.html
@@ -14,7 +14,7 @@
 	
 	</style>
 
-	<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/trpUtility.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
