--- a/scriptLibrary/demo/form/input_placeholder/ex01.html
+++ b/scriptLibrary/demo/form/input_placeholder/ex01.html
@@ -7,7 +7,7 @@
 	.trp_inputWarp { }
 	.trp_placeholder { font-size:16px }
 </style>
-<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpForm.js"></script>
 
 <script type="text/javascript">	  
