--- a/scriptLibrary/demo/menu/tabSimple/ex01.html
+++ b/scriptLibrary/demo/menu/tabSimple/ex01.html
@@ -3,7 +3,7 @@
 <head>    
   <meta charset="UTF-8">
   <title>tab_menu</title>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/trpMenu.js"></script>
   <style type="text/css">		
     .tabs { display: inline-block; position:relative; margin:0; padding:0; width:800px; }
