--- a/scriptLibrary/demo/popup/layerPopup/ex01.html
+++ b/scriptLibrary/demo/popup/layerPopup/ex01.html
@@ -11,7 +11,7 @@
     .trp.popup-wrap .trp_popup .con { position:relative; clear: both; height: 220px; padding:10px; text-align: center; }	 
     .trp.popup-wrap .popup-dim { position:absolute; top:0; left:0; width:100%; height:100%;  background: #000000; opacity: 0.7;  filter: alpha(opacity=70);  } 
     </style>
-  <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/trpPopup_all0.83.js"></script>
   <script type="text/javascript">
   $(document).ready(function(){
