--- a/scriptLibrary/demo/popup/layerPopup/ex22.html
+++ b/scriptLibrary/demo/popup/layerPopup/ex22.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 
 </style>
-<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/imCommon.js"></script>
 
 <script type="text/javascript">
