--- a/scriptLibrary/demo/jQueryPlugin/imageloader/ex01.html
+++ b/scriptLibrary/demo/jQueryPlugin/imageloader/ex01.html
@@ -5,7 +5,7 @@
  <head>
   <title>imageloader jQuery Plugin</title>
     
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
     <script src="../../../../asset/js/libs/jquery.imageloader/jquery.imageloader.js" ></script>
 
     <style type="text/css">
