--- a/jqueryPlugin/demo/jQueryUI/dialog/ex02.html
+++ b/jqueryPlugin/demo/jQueryUI/dialog/ex02.html
@@ -8,7 +8,7 @@
 		/* 공통 스타일 */		
 		body {	font-size: 62.5%; 	font-family: "Trebuchet MS", "Arial", "Helvetica", "Verdana", "sans-serif"; 	}
 	</style>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>	
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>	
 	<script src="../../../../asset/js/libs/jquery-ui-1.10.4.custom.js"></script>
 	<script>
 	$(function() {
