--- a/jqueryPlugin/demo/jQueryUI/dialog/ex10.html
+++ b/jqueryPlugin/demo/jQueryUI/dialog/ex10.html
@@ -13,7 +13,7 @@
     background: green;
   }
   </style>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 </head>
 <body>
