--- a/scriptLibrary/demo/jQueryUI/button/ex03.html
+++ b/scriptLibrary/demo/jQueryUI/button/ex03.html
@@ -12,7 +12,7 @@
   -->	
 
 	<link rel="stylesheet" href="../../../../asset/js/libs/jquery-ui-1.10.4.custom/themes/base/jquery.ui.all.css">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>	
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>	
 	<script src="../../../../asset/js/libs/jquery-ui-1.10.4.custom/ui/jquery.ui.core.js"></script>
 	<script src="../../../../asset/js/libs/jquery-ui-1.10.4.custom/ui/jquery.ui.widget.js"></script>
 	<script src="../../../../asset/js/libs/jquery-ui-1.10.4.custom/ui/jquery.ui.button.js"></script>
