--- a/styleGuide/lnb.html
+++ b/styleGuide/lnb.html
@@ -164,6 +164,7 @@ $(document).ready(function(){
 			<ul class="sublist">
 				<li><a href="/TRpackage/styleGuide/demo/css3_btn/switch/default.html?dep1=10&dep2=0"	>switch</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/css3_btn/material/default.html?dep1=10&dep2=1"	>material</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3_btn/underline/default.html?dep1=10&dep2=2"	>underline</a></li>
 				
 			</ul>
 		</li>
