--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -107,12 +107,12 @@
         <li><a href="/TRpackage/scriptLibrary/demo/form/select/default.html?dep1=2&dep2=4">trpSelectbox </a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/form/limit_text/default.html?dep1=2&dep2=5">trpLimitText </a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/form/dropdown/default.html?dep1=2&dep2=6">trpDropdown </a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/form/tooltip/default.html?dep1=2&dep2=7">trpItp </a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/form/tooltip/default.html?dep1=2&dep2=7">trpTip </a></li>
       </ul>
     </li>
 
     <li class="mn_2depth">
-      <!-- dep1=3 -->
+        <!-- dep1=3 -->
       <h2 class="nav_h2"><span>Popup</span>
         <p class="dep2-more" ><a href="javascript:return false;" ><span class="plus">+</span><span class="minus"  >-</span></a></p>	
       </h2>
@@ -221,6 +221,7 @@
         <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnceFn/default.html?dep1=11&dep2=4">trpUtilityChangeOnceFn</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnceFnFn/default.html?dep1=11&dep2=5">trpUtilityChangeOnceFnFn</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/utility/removeClassPrefix/default.html?dep1=11&dep2=6">trpRemoveClassPrefix</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/utility/HasScrollBar/default.html?dep1=11&dep2=7">trpHasScrollBar</a></li>
       </ul>
     </li>
     
