[2024-0215] SVG shape line motion

--- a/styleGuide/lnb.html
+++ b/styleGuide/lnb.html
@@ -173,7 +173,9 @@ $(document).ready(function(){
 		<li class="mn_2depth">
 			<h2 class="nav_h2"><span>svg</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">				
-				<li><a href="/TRpackage/styleGuide/demo/svg/dot-motion/default.html?dep1=11&dep2=1"			>dot motion</a></li>	<li><a href="/TRpackage/styleGuide/demo/svg/hover-motion/default.html?dep1=11&dep2=1"			>hover motion</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/svg/shapeline-motion/default.html?dep1=11&dep2=0"			>shapeline motion</a></li>	
+				<li><a href="/TRpackage/styleGuide/demo/svg/dot-motion/default.html?dep1=11&dep2=1"						>dot motion</a></li>	
+				<li><a href="/TRpackage/styleGuide/demo/svg/hover-motion/default.html?dep1=11&dep2=2"					>hover motion</a></li>
 			</ul>
 		</li>
 
