--- a/styleGuide/lnb.html
+++ b/styleGuide/lnb.html
@@ -150,11 +150,12 @@ $(document).ready(function(){
 			<ul class="sublist">
 				<li><a href="/TRpackage/styleGuide/demo/css3/shadow/default.html?dep1=9&dep2=0"			>shadow</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/css3/shape/default.html?dep1=9&dep2=1"			>shape</a></li>
-				<li><a href="/TRpackage/styleGuide/demo/css3/loader/default.html?dep1=9&dep2=2"			>loader</a></li>
-				<li><a href="/TRpackage/styleGuide/demo/css3/progress/default.html?dep1=9&dep2=3"		>progress</a></li>
-				<li><a href="/TRpackage/styleGuide/demo/css3/motion/default.html?dep1=9&dep2=4"			>motion</a></li>
-				<li><a href="/TRpackage/styleGuide/demo/css3/flip/default.html?dep1=9&dep2=5"			>flip motion</a></li>
-				<li><a href="/TRpackage/styleGuide/demo/css3/slash/default.html?dep1=9&dep2=6"			>slash</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3/slash/default.html?dep1=9&dep2=2"			>slash</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3/motion/default.html?dep1=9&dep2=3"			>motion</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3/loader/default.html?dep1=9&dep2=4"			>loader</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3/progress/default.html?dep1=9&dep2=5"		>progress</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3/flip/default.html?dep1=9&dep2=6"			  >flip motion</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3/particle/default.html?dep1=9&dep2=9"		>particle motion</a></li>
 			</ul>
 		</li>
 		
