--- a/jqueryPlugin/lnb.html
+++ b/jqueryPlugin/lnb.html
@@ -90,6 +90,7 @@ $(document).ready(function(){
 					<li><a href="/TRpackage/jqueryPlugin/demo/layout/stickyfill/default.html?dep1=2&dep2=1">sticky 속성 범용(stickyfill)</a></li>
 					<li><a href="/TRpackage/jqueryPlugin/demo/layout/fullPage/default.html?dep1=2&dep2=2">fullPage.js</a></li>
 					<li><a href="/TRpackage/jqueryPlugin/demo/layout/scrollMagic/default.html?dep1=2&dep2=3">scrollMagic</a></li>
+					<li><a href="/TRpackage/jqueryPlugin/demo/layout/scrollTrigger/default.html?dep1=2&dep2=4">scrollTrigger</a></li>
 				</ul>
 			</li>
 		
