--- a/scriptLibrary/demo/form/input_checkbox/default.html
+++ b/scriptLibrary/demo/form/input_checkbox/default.html
@@ -54,7 +54,32 @@
 					</tbody>
 				</table>
 
-			    
+				<table class="table_col" summary="생성되는 options 설명">
+					<caption class="tit">$(xxx).trpCheckBoxAllsImg($checkAll, $checkItem, $itemParen)</caption>
+					<colgroup>
+						<col width="150">
+						<col width="">		
+					</colgroup>
+					<tbody>
+					<tr>
+						<th scope="col">options 이름</th>
+						<th scope="col">options 설명</th>
+					</tr>
+					<tr>
+						<td>$checkAll</td>
+						<td>전체 체크박스 선택자 </td>		
+					</tr>
+					<tr>
+						<td>$checkAll</td>
+						<td>개별 체크박스 선택자</td>		
+					</tr>
+					<tr>
+						<td>$itemParent</td>
+						<td>아이템 부모</td>		
+					</tr>
+					</tbody>
+				</table>
+
 		
 			</div>
 		</div>
