--- a/responsive/lnb.html
+++ b/responsive/lnb.html
@@ -51,8 +51,9 @@ $(document).ready(function(){
 			<h2 class="nav_h2"><span>layout</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">
 				<li><a href="/TRpackage/responsive/demo/layout/mediaQueries/default.html?dep1=1&dep2=0"	 >media query</a></li>	
-				<li><a href="/TRpackage/responsive/demo/layout/deviceMediaQueries/default.html?dep1=1&dep2=1"	 >device media query</a></li>				
-				<li><a href="/TRpackage/responsive/demo/layout/gride/default.html?dep1=1&dep2=2"	 >grid system</a></li>
+				<li><a href="/TRpackage/responsive/demo/layout/containerQueries/default.html?dep1=1&dep2=1"	 >container query</a></li>	
+				<li><a href="/TRpackage/responsive/demo/layout/deviceMediaQueries/default.html?dep1=1&dep2=2"	 >device media query</a></li>				
+				<li><a href="/TRpackage/responsive/demo/layout/gride/default.html?dep1=1&dep2=3"	 >grid system</a></li>
 				<!-- <li>topMenu</li> -->
 			</ul>
 		</li>
