[2025-0226] 스크립트 로드 방법

--- a/uiGuide/lnb.html
+++ b/uiGuide/lnb.html
@@ -38,13 +38,17 @@ $(document).ready(function(){
   	<h1 class="nav_h1"><a href="/TRpackage/uiGuide/index.html"><span>UI 가이드</span></a></h1>
 
     <ul class="list">
-		<!--<li class="mn_2depth">			
-			<h2 class="nav_h2"><span>HTML 가이드</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
+		<li class="mn_2depth">
+			<h2 class="nav_h2"><span>html 가이드</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">
-				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_rule.html" >기본 규칙</a></li>
-				<li><a href="/TRpackage/uiGuide/demo/html_guide/html5_element.html" >HTML5의 요소</a></li>
+				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_meta.html?dep1=0&dep2=0">meta 정보가이드</a></li>
+				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_favicon.html?dep1=0&dep2=1">fiavicon 정보가이드</a></li>
+				<!-- <li><a href="/TRpackage/uiGuide/demo/html_guide/html_rule.html" >기본 규칙</a></li>
+				<li><a href="/TRpackage/uiGuide/demo/html_guide/html5_element.html" >HTML5의 요소</a></li> -->
 			</ul>
 		</li>
+
+		<!--
 		<li class="mn_2depth">
 			<h2 class="nav_h2"><span>CSS 가이드</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">
@@ -52,13 +56,6 @@ $(document).ready(function(){
 				<li><a href="/TRpackage/uiGuide/demo/css_guide/css3_element.html" >css3의 요소</a></li>
 			</ul>
 		</li>-->
-    	<li class="mn_2depth">
-			<h2 class="nav_h2"><span>html 가이드</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
-			<ul class="sublist">
-				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_meta.html?dep1=0&dep2=0">meta 정보가이드</a></li>
-				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_favicon.html?dep1=0&dep2=1">fiavicon 정보가이드</a></li>
-			</ul>
-		</li>
 		<li class="mn_2depth">
 			<h2 class="nav_h2"><span>Naming 가이드</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">
@@ -66,6 +63,12 @@ $(document).ready(function(){
 				<!--<li><a href="/TRpackage/uiGuide/demo/naming/id_css.html?dep1=0&dep2=1" >id/css 규칙</a></li>
 				<li><a href="/TRpackage/uiGuide/demo/naming/image.html?dep1=0&dep2=2" >image 규칙</a></li>
 				<li><a href="/TRpackage/uiGuide/demo/naming/folder.html?dep1=0&dep2=3" >파일/폴더/디렉토리 규칙</a></li>-->
+			</ul>
+		</li>
+		<li class="mn_2depth">
+			<h2 class="nav_h2"><span>코딩 가이드 </span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
+			<ul class="sublist">
+				<li><a href="/TRpackage/uiGuide/demo/coding/script_guide.html?dep1=2&dep2=0" >script 로드 방법</a></li>
 			</ul>
 		</li>
 		<!--
