--- a/scriptLibrary/demo/form/dropdown/ex01.html
+++ b/scriptLibrary/demo/form/dropdown/ex01.html
@@ -3,15 +3,19 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>trpEllipsis | TR package</title>
-
+ 
 <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpForm.js"></script>
+
 <style>
 	html, body { margin:0; padding:0; min-height: 100%; height: 100%; }	
   .trp-dropdown-area { position: relative; width: 300px;}
   .js-dropdown-btn { height: 30px;}
   .js-dropdown-btn.active { background-color: #ff0000; }
-  .trp-dropdown_list-box {position: absolute; top:30px; left: 0; width: 100%; display: none; background-color: #003300;}
+  .trp-dropdown_list-box { position: absolute; top:30px; left: 0; width: 100%;background-color: #003300;
+    display: none; 
+  }
+  .trp-dropdown_list-box.show { display: block; }
 </style>
 
 </head>
