--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -198,7 +198,7 @@
         <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollActivePer/default.html?dep1=9&dep2=6">trpScrollActivePer</a></li>
         <!-- <li><a href="/TRpackage/scriptLibrary/demo/layout/colH/default.html?dep1=9&dep2=6">trpColH</a></li> -->
         <li><a href="/TRpackage/scriptLibrary/demo/layout/colItmeH/default.html?dep1=9&dep2=7">trpColItemH</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/layout/tabScrollMenu/default.html?dep1=9&dep2=8">tabScrollMenu</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/layout/tabScrollMenu/default.html?dep1=9&dep2=8">trpTabScrollMenu</a></li>
       </ul>
     </li>
     
