--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -199,7 +199,7 @@
         <!-- <li><a href="/TRpackage/scriptLibrary/demo/layout/colH/default.html?dep1=9&dep2=6">trpColH</a></li> -->
         <li><a href="/TRpackage/scriptLibrary/demo/layout/colItmeH/default.html?dep1=9&dep2=7">trpColItemH</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/layout/tabScrollMenu/default.html?dep1=9&dep2=8">trpTabScrollMenu</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/layout/StickyEvent/default.html?dep1=9&dep2=9">trpTabScrollMenu</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/layout/stickyEvent/default.html?dep1=9&dep2=9">trpStickyEvent</a></li>
       </ul>
     </li>
     
