--- a/styleGuide/lnb.html
+++ b/styleGuide/lnb.html
@@ -58,7 +58,8 @@ $(document).ready(function(){
 				<li><a href="/TRpackage/styleGuide/demo/layout/scrollbar/default.html?dep1=1&dep2=4"	>scollber </a></li>
 				<li><a href="/TRpackage/styleGuide/demo/layout/align/default.html?dep1=1&dep2=5"	>align </a></li>
 				<li><a href="/TRpackage/styleGuide/demo/layout/flex/default.html?dep1=1&dep2=6"	>flex </a></li>
-				<li><a href="/TRpackage/styleGuide/demo/layout/sticky/default.html?dep1=1&dep2=7"	>sticky </a></li>
+				<li><a href="/TRpackage/styleGuide/demo/layout/grid/default.html?dep1=1&dep2=7"	>grid </a></li>
+				<li><a href="/TRpackage/styleGuide/demo/layout/sticky/default.html?dep1=1&dep2=8"	>sticky </a></li>
 			</ul>
 		</li>
 		<!-- dep1=2 : navigation -->
