--- a/uiGuide/lnb.html
+++ b/uiGuide/lnb.html
@@ -45,7 +45,7 @@ $(document).ready(function(){
 				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_favicon.html?dep1=0&dep2=1">fiavicon 정보가이드</a></li>
 				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_logical_text.html?dep1=0&dep2=2">html_logical_text</a></li>
 				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_logical_group.html?dep1=0&dep2=3">html_logical_group</a></li>
-				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_logical.html?dep1=0&dep2=4">html_logical</a></li>
+				<li><a href="/TRpackage/uiGuide/demo/html_guide/html_physical_action.html?dep1=0&dep2=4">html_physical_action</a></li>
 				<!-- <li><a href="/TRpackage/uiGuide/demo/html_guide/html_rule.html" >기본 규칙</a></li>
 				<li><a href="/TRpackage/uiGuide/demo/html_guide/html5_element.html" >HTML5의 요소</a></li> -->
 			</ul>
