--- a/uiGuide/demo/html_guide/html_logical_group.html
+++ b/uiGuide/demo/html_guide/html_logical_group.html
@@ -212,6 +212,7 @@
 				<dl>
 					<dt>설명</dt>					
 					<dd><span class="icon"></span>form 요소 그룹화</dd>
+					<dd><span class="icon"></span>fieldset : disabled 하면 그룹전체가 <strong>disabled</strong> 된다.</dd>
 				</dl>
 				
 				<div class="ex_wapper">
