[2025-0821] tel, email 정규식적용

--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -107,7 +107,7 @@
         <li><a href="/TRpackage/scriptLibrary/demo/form/select/default.html?dep1=2&dep2=4">trpSelectbox </a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/form/limit_text/default.html?dep1=2&dep2=5">trpLimitText </a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/form/dropdown/default.html?dep1=2&dep2=6">trpDropdown </a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/form/tooltip/default.html?dep1=2&dep2=7">trpTip </a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/form/tooltip/default.html?dep1=2&dep2=7">trpToolTip </a></li>
       </ul>
     </li>
 
