--- a/styleGuide/demo/form/file/default.html
+++ b/styleGuide/demo/form/file/default.html
@@ -50,7 +50,43 @@
 					<dt>설명</dt>					
 					<dd><span class="icon"></span>input 요소의 file 대한 재정의</dd>
 				</dl>
-				
+				<table class="table_col" summary="속성 옵션 설명">
+					<caption>attributes 옵션</caption>
+					<colgroup>
+						<col width="150">
+						<col width="">		
+					</colgroup>
+					<tbody>
+					<tr>
+						<th scope="col">속성</th>
+						<th scope="col">속성 설명</th>
+					</tr>
+					<tr>
+						<td>accept="audio/*</td>
+						<td>모든 오디오파일</td>		
+					</tr>
+					<tr>
+						<td>accept="video/*"</td>
+						<td>모든 비디오</td>		
+					</tr>
+					<tr>
+						<td>accept="image/*"</td>
+						<td>모든 이미지 <br>
+						(특정 이미지: accept="image/png, image/jpeg") <br>
+						(특정 확장자: accept=".jpg, .jpeg, .png, .gif")
+						</td>		
+					</tr>
+					<tr>
+						<td>multiple </td>
+						<td>다중선택</td>		
+					</tr>
+					<tr>
+						<td>required </td>
+						<td>필수선택</td>		
+					</tr>
+					
+					</tbody>
+				</table>
 
 
 				<div class="ex_wapper">
