--- a/styleGuide/lnb.html
+++ b/styleGuide/lnb.html
@@ -92,11 +92,11 @@ $(document).ready(function(){
 			<h2 class="nav_h2"><span>form</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">
 				<li><a href="/TRpackage/styleGuide/demo/form/text/default.html?dep1=4&dep2=0"	>:text</a></li>
-				<li><a href="/TRpackage/styleGuide/demo/form/select/default.html?dep1=4&dep2=1"	>:select</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/form/file/default.html?dep1=4&dep2=1"	  >:file</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/form/radio/default.html?dep1=4&dep2=2"	>:radio</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/form/checkbox/default.html?dep1=4&dep2=3"	>:checkbox</a></li>				
-				<li><a href="/TRpackage/styleGuide/demo/form/textarea/default.html?dep1=4&dep2=4"	>:textarea</a></li>
-				<li><a href="/TRpackage/styleGuide/demo/form/file/default.html?dep1=4&dep2=5"	>:file</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/form/select/default.html?dep1=4&dep2=4"	>select</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/form/textarea/default.html?dep1=4&dep2=5"	>textarea</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/form/membership_form/default.html?dep1=4&dep2=6">- [ membership_form ]</a></li>
 			</ul>
 		</li>
