--- a/scriptLibrary/demo/form/dropdown/ex02.html
+++ b/scriptLibrary/demo/form/dropdown/ex02.html
@@ -10,8 +10,8 @@
 <style>
 	html, body { margin:0; padding:0; min-height: 100%; height: 100%; }	
   .trp-dropdown-area { position: relative; width: 300px;}
+  .trp-dropdown-area.active  .js-dropdown-btn{ background-color: #ff0000; }
   .js-dropdown-btn { height: 30px;}
-  .js-dropdown-btn.active { background-color: #ff0000; }
   .trp-dropdown_list-box { position: absolute; top:30px; left: 0; width: 100%;background-color: #ccc;
     display: none; 
   }
@@ -23,25 +23,35 @@
 
 	<div id="wrap">
     
-    <div class="trp-dropdown-area">
-      <button class="js-dropdown-btn"><span>드롭다운버튼</span></button>
-      <div class="trp-dropdown_list-box" data-trp-focusid="js-user_support" >
+
+
+    <div class="trp-dropdown-area" id="dropdown2">
+      <button class="js-dropdown-btn" onclick="trpJsDropdown('dropdown2')">
+        <span>언어 선택</span>
+      </button>
+      <div class="trp-dropdown_list-box">
         <ul>
-          <li><a href="#">aaaaaaaaaaaaaa</a></li>
-          <li><a href="#">bbbbbbbbbb</a></li>
-          <li><a href="#">cccccccccccc</a></li>
+          <li><a href="#">🇰🇷 한국어</a></li>
+          <li><a href="#">🇺🇸 English</a></li>
+          <li><a href="#">🇯🇵 日本語</a></li>
+          <li><a href="#">🇨🇳 中文</a></li>
+          <li><a href="#">🇪🇸 Español</a></li>
         </ul>
-      </div>  
+      </div>
     </div>
+
     <script>
-      var dropdown = $(".js-dropdown-btn").trpDropdown({ list : ".trp-dropdown_list-box" , area:".trp-dropdown-area"});
-      $(".trp-dropdown-area .trp-dropdown_list-box a").on("click", function(){
-        var _this = $(this);
-        _this.closest(".trp-dropdown-area").find( ".js-dropdown-btn span" ).text( _this.text() );
-        dropdown.getClose();
+      // 페이지 로드시 초기화
+      document.addEventListener('DOMContentLoaded', function () {
+        trpJsDropdownManager.init();
+
+        // 선택 항목 콜백 함수 설정
+        trpJsDropdownManager.onSelect(function (item, dropdownId) {
+          console.log(`선택된 항목: ${item}, 드롭다운 ID: ${dropdownId}`);
+        });
       });
     </script>
-      
+
   </div>
 	
 </body>
