--- a/scriptLibrary/demo/form/dropdown/default.html
+++ b/scriptLibrary/demo/form/dropdown/default.html
@@ -249,7 +249,7 @@
 						<td>트롭다운 선택 아이템 콜백 함수()</td>		
 					</tr>
 					<tr>
-						<td>.destroy($)</td>
+						<td>.destroy()</td>
 						<td>트롭다운 이벤트 삭제</td>		
 					</tr>
 					
