--- a/scriptLibrary/demo/form/dropdown/ex02.html
+++ b/scriptLibrary/demo/form/dropdown/ex02.html
@@ -9,10 +9,10 @@
 
 <style>
 	html, body { margin:0; padding:0; min-height: 100%; height: 100%; }	
-  .trp-dropdown-area { position: relative; width: 300px;}
+  .trp-dropdown-area { position: relative; display: inline-block;}
   .trp-dropdown-area.active  .js-dropdown-btn{ background-color: #ff0000; }
   .js-dropdown-btn { height: 30px;}
-  .trp-dropdown_list-box { position: absolute; top:30px; left: 0; width: 100%;background-color: #ccc;
+  .trp-dropdown_list-box { position: absolute; top:30px; left: 0; width: 100%; min-width: 150px; background-color: #ccc;
     display: none; 
   }
   .trp-dropdown_list-box.show { display: block; }
@@ -28,14 +28,15 @@
     <div class="trp-dropdown-area" id="dropdown2">
       <button class="js-dropdown-btn" onclick="trpJsDropdown('dropdown2')">
         <span>언어 선택</span>
+        <i>▼</i>
       </button>
       <div class="trp-dropdown_list-box">
         <ul>
-          <li><a href="#">🇰🇷 한국어</a></li>
-          <li><a href="#">🇺🇸 English</a></li>
-          <li><a href="#">🇯🇵 日本語</a></li>
-          <li><a href="#">🇨🇳 中文</a></li>
-          <li><a href="#">🇪🇸 Español</a></li>
+          <li data-val="ko"><a href="#">🇰🇷 한국어</a></li>
+          <li data-val="us"><a href="#">🇺🇸 English</a></li>
+          <li data-val="jp"><a href="#">🇯🇵 日本語</a></li>
+          <li data-val="cn"><a href="#">🇨🇳 中文</a></li>
+          <li data-val="es"><a href="#">🇪🇸 Español</a></li>
         </ul>
       </div>
     </div>
@@ -43,11 +44,11 @@
     <script>
       // 페이지 로드시 초기화
       document.addEventListener('DOMContentLoaded', function () {
-        trpJsDropdownManager.init();
+        trpJsDropdownManager.init();      // 이벤트 리스너 등록 
 
         // 선택 항목 콜백 함수 설정
-        trpJsDropdownManager.onSelect(function (item, dropdownId) {
-          console.log(`선택된 항목: ${item}, 드롭다운 ID: ${dropdownId}`);
+        trpJsDropdownManager.onSelect(function ($selectObj) {
+          console.log( `드롭다운 ID: ${$selectObj.id}   선택된 항목Text: ${$selectObj.text}    선택된 항목value: ${$selectObj.value}` );
         });
       });
     </script>
